# Krishi-Saarthi

./: .gitignore  .gitmodules  README.md  The Misfits Final Synopsis - Krishi Saarthi - Capital One LaunchPad 2025.md  main.py  synopsis.md
ML_scripts/: crop_recommendation_shap.py  inference_smolvlm.py  instruction_tuning_smolvlm.py  prefixtuning_tinyllama.py  training_lstm_price_prediction.py
app/api/: health.py
backend/: .env.example  Dockerfile  krishi-saarthi-main-firebase-adminsdk-fbsvc-1f18180255.json  main.py  pyproject.toml
backend/app/api/: chat.py  guided_mode.py  kcc.py  mandi_price.py  router.py  schemes.py  twilio.py  twilio_config.py  user_profile.py  youtube_recommendation.py
backend/app/api/schemes/: __init__.py  router.py
backend/app/core/: config.py
backend/app/models/lstm/ajwan/: mandi_lstm_ajwan_model.pth  price_scaler_ajwan.pkl  scaled_prices_ajwan.npy
backend/app/models/lstm/rice/: mandi_lstm_rice_model.pth  price_scaler_rice.pkl  scaled_prices_rice.npy
backend/app/models/lstm/sugarcane/: mandi_lstm_sugarcane_model.pth  price_scaler_sugarcane.pkl  scaled_prices_sugarcane.npy
backend/app/schemas/: chat.py  guided_mode.py  user_profile.py  youtube_recommendation.py
backend/app/services/: chat_processing_service.py  demo_content_service.py  firebase_service.py  guided_mode_service.py  twilio_service.py  youtube_recommendation_service.py
backend/app/services/agents/: dharti_main_agent.py  translation_agent.py
backend/app/services/tools/: govt_scheme_rag_tool.py  govt_scheme_tool.py  kcc_cultural_tool.py  kcc_tool.py  lstm_price_tool.py  market_tool.py  vlm_tool.py
backend/app/services/youtube_recommender/: config.py  firebase_client.py  llm_generator.py  main.py  stage_detector.py  youtube_client.py
backend/app/utils/: logger.py
mobile/: .env.example  .gitignore  README.md  pubspec.yaml
mobile/lib/: firebase_options.dart  i18n.dart  main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  (+1 more)
(+50 files in other folders)
